kubernetes/apps/observability/victoria-logs/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: observability
  annotations:
    glance/name: Victoria Logs
    glance/show: "false"
    glance/icon: https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/victoriametrics.png
    glance/description: "Fast log management and analytics."
spec:
  hostnames:
    - logs.juno.moe
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: victoria-logs
          namespace: observability
          port: 9428
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
